[gd_scene load_steps=11 format=4 uid="uid://bmvji6yafni8e"]

[ext_resource type="Script" uid="uid://dl8effjwp512w" path="res://scenes_and_scripts/door.gd" id="1_fj4ml"]
[ext_resource type="TileSet" uid="uid://blxt0n5mf7khe" path="res://resources/dungeon_tileset.tres" id="2_lbxlk"]
[ext_resource type="AudioStream" uid="uid://dbkobhwqgu06q" path="res://assets/sound/door-slam-172171.mp3" id="3_lbxlk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dannw"]
size = Vector2(48, 8)

[sub_resource type="Animation" id="Animation_t11uo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClosedDoorLayer:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OpenDoorLayer:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aynv2"]
resource_name = "close_door"
length = 0.750001
step = 0.0125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClosedDoorLayer:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OpenDoorLayer:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_lbxlk")
}],
"times": PackedFloat32Array(0.1)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_k0fax"]
resource_name = "open_door"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClosedDoorLayer:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OpenDoorLayer:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eqpgw"]
_data = {
&"RESET": SubResource("Animation_t11uo"),
&"close_door": SubResource("Animation_aynv2"),
&"open_door": SubResource("Animation_k0fax")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fj4ml"]
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lbxlk"]
radius = 7.0
height = 48.0

[node name="RoomDoor" type="StaticBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_fj4ml")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 12)
shape = SubResource("RectangleShape2D_dannw")

[node name="ClosedDoorLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+////AAAAAAcAAAD+/wAAAAAAAAgAAAD/////AAABAAcAAAD//wAAAAABAAgAAAAAAP//AAACAAcAAAAAAAAAAAACAAgAAAA=")
tile_set = ExtResource("2_lbxlk")

[node name="OpenDoorLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+////AAAGAAcAAAD+/wAAAAAGAAgAAAD//wAAAAAHAAgAAAAAAP//AAAIAAcAAAAAAAAAAAAIAAgAAAA=")
tile_set = ExtResource("2_lbxlk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eqpgw")
}

[node name="AreaNorth" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaNorth"]
position = Vector2(-8, 4)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_fj4ml")
debug_color = Color(0.988207, 0, 0.304575, 0.42)

[node name="AreaSouth" type="Area2D" parent="."]
position = Vector2(0, 2)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSouth"]
position = Vector2(-8, 20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lbxlk")
debug_color = Color(0.622856, 0.351977, 1, 0.42)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -40.0

[connection signal="body_entered" from="AreaNorth" to="." method="_on_area_north_body_entered"]
[connection signal="body_exited" from="AreaNorth" to="." method="_on_area_north_body_exited"]
[connection signal="body_entered" from="AreaSouth" to="." method="_on_area_south_body_entered"]
[connection signal="body_exited" from="AreaSouth" to="." method="_on_area_south_body_exited"]
